Initial commit - IEEE WIE Website

--- a/index.html
+++ b/index.html
@@ -4,20 +4,57 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>IEEE WIE - Women in Engineering</title>
-    <meta name="description" content="IEEE Women in Engineering Affinity Group" />
+    <meta
+      name="description"
+      content="IEEE Women in Engineering Affinity Group"
+    />
     <meta name="author" content="IEEE WIE" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 
-    <meta property="og:title" content="7780e5c7-26cc-448b-89d2-cd78f3e71bd2" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
+
+    <!-- Open Graph Meta Tags -->
+    <meta property="og:title" content="IEEE WIE - Women in Engineering" />
+    <meta property="og:description" content="Made with ❤️ by IEEE WIE" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="/logo.jpg" />
 
+    <!-- Twitter Card Meta Tags -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:site" content="@ieeewie" />
+    <meta name="twitter:image" content="/logo.jpg" />
+
+    <!-- Favicon and Icons -->
+    <link
+      rel="icon"
+      type="image/png"
+      href="/cropped_circle_image.png"
+      sizes="96x96"
+    />
+    <link
+      rel="icon"
+      type="image/svg+xml"
+      href="/favicon.svg"
+    />
+    <link
+      rel="shortcut icon"
+      href="/favicon.ico"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="/cropped_circle_image.png"
+    />
+    <meta name="apple-mobile-web-app-title" content="IEEE WIE" />
+    <link
+      rel="manifest"
+      href="/C:\Users\vyoma\Desktop\VScode\IEEE WIE WEBSITE MAIN\wie-sparkle-web\public/site.webmanifest"
+    />
   </head>
 
   <body>
